<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidBasicsTutorial</string>
    <string name="display_message">Welcome to Android Basics Tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="chapter1_content">This is the first chapter on Android Basics</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="Chap1Title">Chapter 1</string>
    <string name="Chap2Title">Chapter 2</string>
    <string name="chap2Content">This is second chapter on Android Basics</string>
    <string name="chap2back">Back</string>
    <string name="Next">Next</string>
     

</resources>
