<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" 
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chapter1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/chapter1_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/chapter1_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/Chap1Title" />

</RelativeLayout>